--- a/css/quickSignEditor.css
+++ b/css/quickSignEditor.css
@@ -19,7 +19,6 @@
          background-color: orange;
          position: fixed;
          top: 0;
-         width: 30%;
          z-index: 10;
      }
      
@@ -27,8 +26,6 @@
          background-color: lightgreen;
          position: fixed;
          top: 0;
-         width: 40%;
-         margin-left: 30%;
          z-index: 10;
      }
      
@@ -36,7 +33,14 @@
          background-color: purple;
          position: fixed;
          top: 0;
-         width: 30%;
-         margin-left: 70%;
+         z-index: 10;
+         padding-right: 50px;
+     }
+     
+     .drawer {
+         background-color: green;
+         position: fixed;
+         top: 0;
+         right: 0;
          z-index: 10;
      }
