Get fsw from SignMaker Show buttom in SignMaker bottom right

--- a/css/quickSignEditor.css
+++ b/css/quickSignEditor.css
@@ -201,3 +201,10 @@
                     position: absolute;
                     font-size: 30px;
                 }
+                
+                .readytoshow {
+                    position: absolute;
+                    bottom: 0px;
+                    right: 0px;
+                    z-index: 10;
+                }
