--- a/assets/styles/quickSignEditor.css
+++ b/assets/styles/quickSignEditor.css
@@ -6,7 +6,7 @@
                 height: 100%;
                 z-index: 10;
             }
-            
+
             .footer {
                 background-color: lightyellow;
                 position: fixed;
@@ -14,29 +14,29 @@
                 width: 100%;
                 z-index: 10;
             }
-            
+
             .leftspace {
                 background-color: lightsteelblue;
                 position: fixed;
                 top: 0;
                 z-index: 10;
             }
-            
+
             .centerspace {
                 background-color: lightyellow;
                 position: fixed;
                 top: 0;
                 z-index: 10;
             }
-            
+
             .rightspace {
                 background-color: lightyellow;
                 position: fixed;
                 top: 0;
-                padding-right: 50px; 
+                padding-right: 50px;
                 z-index: 2;
             }
-            
+
             .drawer {
                 background-color: lightsteelblue;
                 position: fixed;
@@ -44,7 +44,7 @@
                 right: 0;
                 z-index: 10;
             }
-            
+
             .signview {
                 background-color: lightyellow;
                 position: relative;
@@ -54,22 +54,20 @@
                 border-color: black;
                 border-style: double;
             }
-            
+
             .sym-fill {
-                font-family: 'SignWriting 2010 Filling';
+                font-family: 'SuttonSignWritingFill';
                 fill: white;
+                display:block;
+                
             }
-            
+
             .sym-line {
-                font-family: 'SignWriting 2010';
+                font-family: 'SuttonSignWriting';
                 fill: black;
+                display:block;
             }
-            
-            .disablePanZoom {
-                -ms-touch-action: none;
-                touch-action: none;
-            }
-            
+  
             .sym-fill,
             .sym-line {
                 left: 0;
@@ -79,7 +77,7 @@
                 z-index: 11;
                 font-size: 30px;
             }
-            
+ 
             .nonativedrag,
             .sym-fill,
             .sym-line,
@@ -91,18 +89,18 @@
                 -ms-user-select: none;
                 user-select: none;
             }
-            
+
             .keyboard {
                 font-size: 0;
                 margin: 0;
                 padding: 0;
                 line-height: 0
             }
-            
+
             .keyboard .alphabetic {
                 text-align: center;
             }
-            
+
             .keyboard .alphabetic,
             .keyboard .arrows,
             .keyboard .numeric {
@@ -110,7 +108,7 @@
                 display: block;
                 overflow: hidden;
             }
-            
+
             .keyboard .key {
                 position: relative;
                 display: inline-block;
@@ -132,59 +130,59 @@
                 -o-transition: width .15s, margin-right .15s, background-position 0s;
                 transition: width .15s, margin-right .15s, background-position 0s;
             }
-            
+
             .alphabetic .row:nth-child(1) .key:nth-child(14) {
                 width: 9.5%;
             }
-            
+
             .alphabetic .row:nth-child(2) .key:nth-child(1),
             .alphabetic .row:nth-child(2) .key:nth-child(14) {
                 width: 7.875%;
             }
-            
+
             .alphabetic .row:nth-child(3) .key:nth-child(1),
             .alphabetic .row:nth-child(3) .key:nth-child(13) {
                 width: 11.1%;
             }
-            
+
             .alphabetic .row:nth-child(4) .key:nth-child(1),
             .alphabetic .row:nth-child(4) .key:nth-child(12) {
                 width: 14.4%;
             }
-            
+
             .alphabetic .row:nth-child(5) .key:nth-child(4) {
                 width: 44.1%;
             }
-            
+
             .alphabetic .row:nth-child(5) .key:nth-child(1),
             .alphabetic .row:nth-child(5) .key:nth-child(7) {
                 width: 11.75%;
             }
-            
+
             .alphabetic .key {
                 width: 6.3%;
             }
-            
+
             .arrows div:nth-child(2) .row:nth-child(1) .key:nth-child(1) {
                 margin-left: 29%;
             }
-            
+
             .numeric .row:nth-child(1) .key:nth-child(1) {
                 margin-left: 23%;
             }
-            
+
             .numeric .row:nth-child(5) .key:nth-child(1) {
                 width: 45%;
             }
-            
+
             .arrows .key {
                 width: 28%;
             }
-            
+
             .numeric .key {
                 width: 22%;
             }
-            
+
             .key span:nth-of-type(1) {
                 color: #AAA;
                 position: absolute;
@@ -192,7 +190,7 @@
                 bottom: 7px;
             }
             /*scale svg to size of parent */
-            
+
             .scaletoparent {
                 position: absolute;
                 display: block;
@@ -205,36 +203,36 @@
                 max-height: 95%;
                 cursor: default;
             }
-            
+
             .scaletoparent div {
                 display: block;
                 position: absolute;
                 top: 6px;
                 margin: auto;
             }
-            
+
             .symbol {
                 position: absolute;
             }
-            
+
             .symbol,
             .font-30 {
                 font-size: 30px;
             }
-            
+
             .readytoshow {
                 position: absolute;
                 bottom: 0px;
                 right: 0px;
                 z-index: 10;
             }
-            
+
             .choosing {
                 display: block;
                 height: 33px;
                 cursor: pointer;
             }
-            
+
             .chosercolumn {
                 border-width: 2px;
                 border-color: black;
@@ -242,17 +240,17 @@
                 padding: 2px;
                 padding-top: 10px;
             }
-            
+
             td, .center{
                 text-align: center;
                 vertical-align: middle;
             }
             /*Keep the tooltip from displaying blurry*/
-            
+
             .mdl-tooltip {
                 will-change: unset;
             }
-            
+
             .symbolchooserheader {
                 background-color: lightsteelblue;
                 top: -10px;
@@ -260,10 +258,51 @@
 
              .pressed {
                 background-color: darkslategray;
-              
+
             }
 
               .activemode {
                 background-color: paleturquoise;
-              
+
             }
+
+   .centerdiv  {
+        position: absolute;
+        overflow: auto;
+    margin: auto;
+
+      top: 0;
+      left: 0;
+       bottom: 0;
+       right: 0; }
+      .centerdivcontainer  {
+     position:relative;
+            width:inherit;
+            height:inherit;}
+              
+
+    .centerspan{
+ position:absolute;
+    display:inline-block;
+    }
+
+    .centerspancontainer {
+    position: relative;   
+    text-align: center;
+    vertical-align:middle;
+    display:table-cell;
+    }
+ 
+   .border {
+     border-width: 1px;
+                border-color: black;
+                border-style: solid;
+}
+
+   .hover:hover {
+ 
+                   border-width: 1px;
+                border-color: deepskyblue;
+                border-style: solid;
+
+}
